<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ID Estudiante -->
    <EditText
        android:id="@+id/etIdEstudiante"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/etIdEstudiante_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- ID Materia -->
    <EditText
        android:id="@+id/etIdMateria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/etIdMateria_hint"
        app:layout_constraintTop_toBottomOf="@id/etIdEstudiante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Nota -->
    <EditText
        android:id="@+id/etNota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/etNota_hint"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/etIdMateria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Botonera -->
    <LinearLayout
        android:id="@+id/botoneraCalificaciones"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/etNota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btnGuardarCalificacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnGuardarCalificacion"/>

        <Button
            android:id="@+id/btnBuscarCalificacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnBuscarCalificacion"/>
    </LinearLayout>

    <!-- ListView -->
    <ListView
        android:id="@+id/lvCalificaciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/botoneraCalificaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>