<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="2dp"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="4dp"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Nombre -->
        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_docente"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/text_primary" />

        <!-- Documento -->
        <TextView
            android:id="@+id/tvDocumento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/documento"
            android:textSize="14sp"
            android:textColor="@color/text_secondary" />

        <!-- Correo -->
        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo_electr_nico"
            android:textSize="14sp"
            android:textColor="@color/text_secondary" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
